# wurdle

./: Cargo.toml  Dioxus.toml  index.html  wordle-list
assets/: main.css  sw.js  tailwind.css
src/: app.rs  context.rs  keyboard.rs  lib.rs  main.rs  popup.rs  utils.rs  wordlist.rs
ui/: app-window.slint
