[package]
name = "wurdle"
version = "0.1.0"
authors = ["Ian Donaldson"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rand = "0.10.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]